WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138568
Invalid message WebPageProxy.DidPerformDictionaryLookup on Google stocks result
https://bugs.webkit.org/show_bug.cgi?id=138568
Summary
Invalid message WebPageProxy.DidPerformDictionaryLookup on Google stocks result
Tim Horton
Reported
2014-11-10 11:46:18 PST
We can on occasion (with an explicit selection, usually) have an image in the LookUp attributed string; we don't know how to serialize an attributed string with a image in it, though! In other cases, we round-trip through RTFD. This can lead to bizarre behavior with SVG, etc. (things that AppKit doesn't know how to render), but at least it doesn't crash anymore.
Attachments
patch
(6.60 KB, patch)
2014-11-10 11:51 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(7.79 KB, patch)
2014-11-20 13:48 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-11-10 11:46:52 PST
<
rdar://problem/18904600
>
Tim Horton
Comment 2
2014-11-10 11:51:50 PST
Created
attachment 241295
[details]
patch
Tim Horton
Comment 3
2014-11-10 22:29:34 PST
Comment on
attachment 241295
[details]
patch Sam thinks we should just strip images instead.
Anders Carlsson
Comment 4
2014-11-11 08:50:05 PST
(In reply to
comment #3
)
> Comment on
attachment 241295
[details]
> patch > > Sam thinks we should just strip images instead.
Sounds good to me.
Beth Dakin
Comment 5
2014-11-20 13:48:59 PST
Created
attachment 241976
[details]
Patch
Beth Dakin
Comment 6
2014-11-20 14:04:13 PST
http://trac.webkit.org/changeset/176412
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug