Invalid message WebPageProxy.DidPerformDictionaryLookup on Google stocks result https://bugs.webkit.org/show_bug.cgi?id=138568 -and corresponding- rdar://problem/18904600

Reviewed by Tim Horton.

Source/WebCore:

Add an optional parameter indicating whether or not to include images.
* WebCore.exp.in:
* editing/cocoa/HTMLConverter.h:
* editing/cocoa/HTMLConverter.mm:
(WebCore::editingAttributedStringFromRange):

Source/WebKit/mac:

Skip images for lookup.
* WebView/WebActionMenuController.mm:
(performDictionaryLookupForRange):

Source/WebKit2:

Skip images for lookup.
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performDictionaryLookupForRange):



Canonical link: https://commits.webkit.org/156798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176412 268f45cc-cd09-0410-ab3c-d52691b4dbfc