Source/WebCore/editing/cocoa/HTMLConverter.h
@@ -31,10 +31,12 @@ OBJC_CLASS NSAttributedString;
 namespace WebCore {
     
 class Range;
+
+enum class IncludeImagesInAttributedString { Yes, No };
     
 WEBCORE_EXPORT NSAttributedString *attributedStringFromRange(Range&);
 #if !PLATFORM(IOS)
-WEBCORE_EXPORT NSAttributedString *editingAttributedStringFromRange(Range&);
+WEBCORE_EXPORT NSAttributedString *editingAttributedStringFromRange(Range&, IncludeImagesInAttributedString = IncludeImagesInAttributedString::Yes);
 #endif
 
 }
